@@ -1,6 +1,6 @@
 Package: car
 Version: 2.1-3
-Date: 2016-06-29
+Date: 2016-07-20
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
